# open-simple-audio-recorder

./: CMakeLists.txt
src/: main.c  osaudiorecorder.c
